syntax = "proto3";

option csharp_namespace = "GrpcService.Web.protos";

enum EmployeeStatus {
	NORMAL = 0;
	ONVACATION = 1;
	RESIGNED = 2;
	RETIRED = 3;
}
